--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 <li><a href="https://google.com">Google</a></li>
 <li><a href="https://google.com">Google</a></li>
 <li><a href="https://www.google.com/maps/place/Sekhon+Emporium/@31.6273526,74.7852652,17z/data=!3m1!4b1!4m6!3m5!1s0x391965149b8cadc7:0x2412ec6e6161222b!8m2!3d31.6273481!4d74.7878455!16s%2Fg%2F11jydzvp9_?entry=ttu">Location</a></li>
-<li>Contact us</li>
+<li>Contact us:</li>
+   <ol>
+      <li><a href="./about1.html">Gaganjot Sekhon</a></li>
+      <li><a href="./about2.html">Harjot Sekhon</a></li>
+      <li><a href="./about3.html">Shamsher Singh</a></li>
+   </ol>
 </ul>
 
 
-<img src="https://picsum.photos/id/5/300/200" alt="Picture of the commercial building"/>
+<img src="./site.jpg" height="300" alt="Picture of the commercial building"/>
 
 <hr />
-<img src=""/>
