--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<h1>SEKHON EMPORIUM</h1>
+<!DOCTYPE html>
+<html style="background: rgb(233, 233, 172)" lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>SEKHON EMPORIUM</title>
+</head>
+<body>
+
+
+   <h1>SEKHON EMPORIUM</h1>
 
 <p>
     <h3>
@@ -31,7 +41,11 @@
 </ul>
 
 
-<img src="./site.jpg" height="300" alt="Picture of the commercial building"/>
-
+<a href="features.html"><img src="./site.jpg" height="300" alt="Picture of the commercial building"/></a>
+<p>Clicking on this picture will take you to the ideas of the upcoming projects</p>
 <hr />
+   
+</body>
+</html>
+
 <!--<img src=""/> -->
